Simplified //PREVIEW support